<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_juego"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/ElegirSimbolo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seleccionar_simbolo"
        tools:layout_editor_absoluteX="155dp"
        tools:layout_editor_absoluteY="130dp" />

    <TextView
        android:id="@+id/elegirComienzo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seleccionar_inicio"
        tools:layout_editor_absoluteX="149dp"
        tools:layout_editor_absoluteY="356dp" />

    <TextView
        android:id="@+id/elegirComputador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/computadora"
        tools:layout_editor_absoluteX="63dp"
        tools:layout_editor_absoluteY="448dp" />

    <TextView
        android:id="@+id/elegirHumano"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/humano"
        tools:layout_editor_absoluteX="262dp"
        tools:layout_editor_absoluteY="448dp" />

    <TextView
        android:id="@+id/jugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jugar"
        tools:layout_editor_absoluteX="187dp"
        tools:layout_editor_absoluteY="577dp" />

</androidx.constraintlayout.widget.ConstraintLayout>