<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- pantalla de juego -->
    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridTablero"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="43dp"
        app:columnCount="3"
        app:layout_constraintBottom_toTopOf="@+id/guardar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textoTurno"
        app:rowCount="3">

        <!-- solo es un ejemplo de como se veria -->
        <Button
            android:id="@+id/btn0"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text=""
            android:textSize="60sp" />

        <Button
            android:id="@+id/btn1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text=""
            android:textSize="60sp" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text=""
            android:textSize="60sp" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text=""
            android:textSize="60sp" />

        <Button
            android:id="@+id/btn4"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text=""
            android:textSize="60sp" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text=""
            android:textSize="60sp" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text=""
            android:textSize="60sp" />

        <Button
            android:id="@+id/btn7"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text=""
            android:textSize="60sp" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text=""
            android:textSize="60sp" />


    </androidx.gridlayout.widget.GridLayout>

    <TextView
        android:id="@+id/Titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginBottom="33dp"
        android:text="@string/titulo_juego"
        app:layout_constraintBottom_toTopOf="@+id/textoTurno"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/guardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginBottom="13dp"
        android:text="@string/guardar"
        app:layout_constraintBottom_toTopOf="@+id/analizar"
        app:layout_constraintStart_toStartOf="@+id/analizar"
        app:layout_constraintTop_toBottomOf="@+id/gridTablero" />

    <Button
        android:id="@+id/analizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="9dp"
        android:text="@string/analisis"
        app:layout_constraintBottom_toTopOf="@+id/recomendar"
        app:layout_constraintStart_toStartOf="@+id/recomendar"
        app:layout_constraintTop_toBottomOf="@+id/guardar" />

    <Button
        android:id="@+id/recomendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="46dp"
        android:text="@string/recomendar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/analizar" />

    <TextView
        android:id="@+id/textoTurno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginBottom="53dp"
        android:text="__"
        app:layout_constraintBottom_toTopOf="@+id/gridTablero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.445"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Titulo" />
</androidx.constraintlayout.widget.ConstraintLayout>